@@ -80,3 +80,182 @@ function pm_circuitmegassemblerpipepictures()
     }
   }
 end
+function pm_stainlesspipecoverspictures()
+     return
+  {
+    north =
+    {
+      layers =
+      {
+        {
+          filename = "__periodic-madness__/graphics/entities/buildings/stainless-steel-pipe/stainless-steel-pipe-cover-north.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5
+        },
+        {
+          filename = "__base__/graphics/entity/pipe-covers/pipe-cover-north-shadow.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5,
+          draw_as_shadow = true
+        }
+      }
+    },
+    east =
+    {
+      layers =
+      {
+        {
+          filename = "__periodic-madness__/graphics/entities/buildings/stainless-steel-pipe/stainless-steel-pipe-cover-east.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5
+        },
+        {
+          filename = "__base__/graphics/entity/pipe-covers/pipe-cover-east-shadow.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5,
+          draw_as_shadow = true
+        }
+      }
+    },
+    south =
+    {
+      layers =
+      {
+        {
+          filename = "__periodic-madness__/graphics/entities/buildings/stainless-steel-pipe/stainless-steel-pipe-cover-south.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5
+        },
+        {
+          filename = "__base__/graphics/entity/pipe-covers/pipe-cover-south-shadow.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5,
+          draw_as_shadow = true
+        }
+      }
+    },
+    west =
+    {
+      layers =
+      {
+        {
+          filename = "__periodic-madness__/graphics/entities/buildings/stainless-steel-pipe/stainless-steel-pipe-cover-west.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5
+        },
+        {
+          filename = "__base__/graphics/entity/pipe-covers/pipe-cover-west-shadow.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5,
+          draw_as_shadow = true
+        }
+      }
+    }
+  }
+end
+
+function pm_osmiumpipecoverspictures()
+     return
+  {
+    north =
+    {
+      layers =
+      {
+        {
+          filename = "__periodic-madness__/graphics/entities/buildings/osmium-pipe/osmium-pipe-cover-north.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5
+        },
+        {
+          filename = "__base__/graphics/entity/pipe-covers/pipe-cover-north-shadow.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5,
+          draw_as_shadow = true
+        }
+      }
+    },
+    east =
+    {
+      layers =
+      {
+        {
+          filename = "__periodic-madness__/graphics/entities/buildings/osmium-pipe/osmium-pipe-cover-east.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5
+        },
+        {
+          filename = "__base__/graphics/entity/pipe-covers/pipe-cover-east-shadow.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5,
+          draw_as_shadow = true
+        }
+      }
+    },
+    south =
+    {
+      layers =
+      {
+        {
+          filename = "__periodic-madness__/graphics/entities/buildings/osmium-pipe/osmium-pipe-cover-south.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5
+        },
+        {
+          filename = "__base__/graphics/entity/pipe-covers/pipe-cover-south-shadow.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5,
+          draw_as_shadow = true
+        }
+      }
+    },
+    west =
+    {
+      layers =
+      {
+        {
+          filename = "__periodic-madness__/graphics/entities/buildings/osmium-pipe/osmium-pipe-cover-west.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5
+        },
+        {
+          filename = "__base__/graphics/entity/pipe-covers/pipe-cover-west-shadow.png",
+          priority = "extra-high",
+          width = 128,
+          height = 128,
+          scale = 0.5,
+          draw_as_shadow = true
+        }
+      }
+    }
+  }
+end
