@@ -91,6 +91,7 @@ Date: 2025-12-07
     - Fixed worker robot storage 3 having the wrong prerequisites.
     - Added distinct icons for octane solid fuel recipes.
     - Gave heavy lubricant solar cells their own icon.
+    - Fixed non-vanilla pipes having the wrong ending graphics.
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.514
